add README generate docs
